--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <header>
+        <h1>Welcome to my portfolio</h1>
+    </header>
 </body>
 </html>
