--- a/index.html
+++ b/index.html
@@ -3,19 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="icon.ico">
+    <style>
+    </style>
 </head>
 <body>
+    <noscript>You need to enable JavaScript to view the full site.</noscript>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Experience</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="about-me.html">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="experiments.html">Experiments</a></li>
         </ul>
     </nav>
     <header>
-        <h1>Welcome to my portfolio</h1>
+        <h1>Oscar Hung Personal Portfolio</h1>
+        
+        <img src="profile-picture.jpeg" height="200" width="200" alt="Oscar Hung">
     </header>
+    <main>
+        <section>
+            <h2>My Purpose</h2>
+            <p>I am an <strong>aspiring software engineer</strong> who is developing my skills and knowledge in the field of <strong>traditional full stack development</strong>, 
+                at the same time, learning about <strong>fundamental AI theories and their applications</strong>. I aim to be a competent enginner who could build
+                and implement <strong>efficient and scalable AI systems</strong> in the <em>near future</em>.
+                <span> Feel free to go through my portfolio and learn more about me!</span>
+            </p>
+            <hello-world></hello-world>
+        </section>
+    </main>
+    <footer>
+        <p>Copyright 2025 Oscar Hung Portfolio</p>
+    </footer>
+
+    <script>
+        class HelloWorld extends HTMLElement {
+          connectedCallback() {
+            console.log("Hello world!");
+          }
+        }
+        customElements.define('hello-world', HelloWorld);
+    </script>
 </body>
 </html>
