--- a/about-me.html
+++ b/about-me.html
@@ -49,6 +49,7 @@
                 </svg>
             </h2>
             <article>
+                <h3>Degree</h3>
                 Bachelor of Science in <b>Mathematics and Computer Science</b><br>
                 Minor in Finance<br>
                 University of California, San Diego<br>
