--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
 </head>
 <body>
-    <noscript>You need to enable JavaScript to view the full site.</noscript>
+    <noscript>hello, noscript text :D</noscript>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
