setup, implement basic css variables and fonts

--- a/experience.html
+++ b/experience.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -13,7 +15,6 @@
             <li><a href="about-me.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="experiments.html">Experiments</a></li>
         </ul>
     </nav>
     <header>
