--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
-    <style>
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <noscript>hello, noscript text :D</noscript>
@@ -16,7 +16,6 @@
             <li><a href="about-me.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="experiments.html">Experiments</a></li>
         </ul>
     </nav>
     <header>
