added image optimization and finalized website details

--- a/experience.html
+++ b/experience.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Experience - Oscar Hung</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="menu-toggle-experience" class="menu-toggle">
+        <label for="menu-toggle-experience" class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="experience.html">Experience</a></li>
