--- a/projects.html
+++ b/projects.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects - Oscar Hung</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="menu-toggle-projects" class="menu-toggle">
+        <label for="menu-toggle-projects" class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="experience.html">Experience</a></li>
@@ -39,17 +45,53 @@
                 game tracking, and player profiles; implemented Apple ID login and real-time Supabase sync, achieving
                 less than 200ms update latency and 99.9% uptime across 8 modules.
             </p>
+            <figure>
+                <picture>
+                    <source media="(max-width: 480px)" srcset="pickup1.png" type="image/png">
+                    <img src="pickup1.png" 
+                         alt="Pickup Basketball app screenshot showing virtual queue interface"
+                         width="600" 
+                         height="400"
+                         loading="lazy">
+                </picture>
+                <picture>
+                    <source media="(max-width: 480px)" srcset="pickup2.png" type="image/png">
+                    <img src="pickup2.png" 
+                         alt="Pickup Basketball app screenshot showing live game tracking features"
+                         width="600" 
+                         height="400"
+                         loading="lazy">
+                </picture>
+            </figure>
             <button type="button">
                 View Source Code
             </button>
         </section>
         <section>
-            <h2>Immersion Coffee’s Website Revamped</h2>
+            <h2>Immersion Coffee's Website Revamped</h2>
             <h3>React,HTML5,CSS3,TypeScript,Node.js,Figma,Git</h3>
             <p>
-                ● Redesigned the frontend for a San Diego coffee shop’s website using React; improved page load speed by
+                ● Redesigned the frontend for a San Diego coffee shop's website using React; improved page load speed by
                 40% and visual consistency across 10+ components through Git and Figma-driven collaboration.
             </p>
+            <figure>
+                <picture>
+                    <source media="(max-width: 480px)" srcset="immersion1.png" type="image/png">
+                    <img src="immersion1.png" 
+                         alt="Immersion Coffee website homepage showing modern design"
+                         width="800" 
+                         height="600"
+                         loading="lazy">
+                </picture>
+                <picture>
+                    <source media="(max-width: 480px)" srcset="immersion2.png" type="image/png">
+                    <img src="immersion2.png" 
+                         alt="Immersion Coffee website interior design and menu section"
+                         width="800" 
+                         height="600"
+                         loading="lazy">
+                </picture>
+            </figure>
         </section>
     </main>
     <footer>
