--- a/about-me.html
+++ b/about-me.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me - Oscar Hung</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="menu-toggle-about" class="menu-toggle">
+        <label for="menu-toggle-about" class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="experience.html">Experience</a></li>
@@ -29,8 +34,17 @@
                 <p>San Diego, CA</p>
     
                 <picture>
-                    <source srcset="profile-picture.jpeg" type="image/jpeg">
-                    <img src="profile-picture.jpeg" alt="Oscar Hung profile photo" width="200" height="200">
+                    <source media="(max-width: 480px)" 
+                            srcset="profile-picture-300w.jpeg" 
+                            type="image/jpeg">
+                    <source media="(max-width: 768px)" 
+                            srcset="profile-picture-600w.jpeg" 
+                            type="image/jpeg">
+                    <img src="profile-picture-600w.jpeg" 
+                         alt="Professional headshot of Oscar Hung, Full Stack Developer based in San Diego, California"
+                         width="200" 
+                         height="200"
+                         loading="lazy">
                 </picture>
 
             </profile-card>
@@ -39,7 +53,7 @@
         <section>
             <h2>
                 Education
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path d="M12 3L1 9L12 15L21 10.09V17H23V9L12 3Z" fill="currentColor"/>
                 <path d="M5 13.18V17.18L12 21L19 17.18V13.18L12 17L5 13.18Z" fill="currentColor"/>
                 </svg>
@@ -52,7 +66,13 @@
                 Class of 2027
             </article>
             <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.642672816055!2d-117.23693542381122!3d32.881172478655074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc06c4414caf4f%3A0xefb6aafc89913ea7!2sUniversity%20of%20California%20San%20Diego!5e0!3m2!1sen!2sus!4v1760821225890!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.642672816055!2d-117.23693542381122!3d32.881172478655074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc06c4414caf4f%3A0xefb6aafc89913ea7!2sUniversity%20of%20California%20San%20Diego!5e0!3m2!1sen!2sus!4v1760821225890!5m2!1sen!2sus" 
+                        width="600" 
+                        height="450" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="Map showing location of University of California, San Diego"></iframe>
             </div>
         </section>
         <section>
@@ -73,7 +93,7 @@
             <h3><i>Relevant Awards</i></h3>
             <p>
                 Silver Award - British Physics Olympiad 2022 Senior Physics Challenge; Gold Award -
-                The United Kingdom Mathematics Trust’s 2022 Senior Mathematical Challenge
+                The United Kingdom Mathematics Trust's 2022 Senior Mathematical Challenge
             </p>
         </section>
     </main>
