--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact - Oscar Hung</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>    
     <nav>
+        <input type="checkbox" id="menu-toggle-contact" class="menu-toggle">
+        <label for="menu-toggle-contact" class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="experience.html">Experience</a></li>
@@ -37,7 +43,7 @@
                 </li>
             </ol>
         </section>
-        <form id="contactForm">
+        <form>
             <fieldset>
                 <legend>Send me a message</legend>
                 <label for="name">Name:</label>
@@ -52,11 +58,6 @@
                 <button type="submit">Send Message</button>
             </fieldset>
         </form>
-
-        <dialog id="confirmationDialog">
-            <h3>Success!</h3>
-            <p>Thank you for contacting me!</p>
-        </dialog>
     </main>
     <footer>
         <p>Copyright 2025 Oscar Hung Portfolio</p>
