--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oscar Hung - Personal Portfolio</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <noscript>hello, noscript text :D</noscript>
     <nav>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="experience.html">Experience</a></li>
@@ -21,7 +26,15 @@
     <header>
         <h1>Oscar Hung Personal Portfolio</h1>
         
-        <img src="profile-picture.jpeg" height="200" width="200" alt="Oscar Hung">
+        <picture>
+            <source media="(max-width: 480px)" srcset="profile-picture-300w.jpeg" type="image/jpeg">
+            <source media="(max-width: 768px)" srcset="profile-picture-600w.jpeg" type="image/jpeg">
+            <img src="profile-picture-600w.jpeg" 
+                 alt="Professional portrait of Oscar Hung, software engineer and full stack developer"
+                 width="200" 
+                 height="200"
+                 loading="lazy">
+        </picture>
     </header>
     <main>
         <section>
@@ -31,20 +44,10 @@
                 and implement <strong>efficient and scalable AI systems</strong> in the <em>near future</em>.
                 <span> Feel free to go through my portfolio and learn more about me!</span>
             </p>
-            <hello-world></hello-world>
         </section>
     </main>
     <footer>
         <p>Copyright 2025 Oscar Hung Portfolio</p>
     </footer>
-
-    <script>
-        class HelloWorld extends HTMLElement {
-          connectedCallback() {
-            console.log("Hello world!");
-          }
-        }
-        customElements.define('hello-world', HelloWorld);
-    </script>
 </body>
 </html>
